fixed spacing on edu cards, also fixed button on splash, no more hover and ewxpand. '

--- a/assets/css/splash.css
+++ b/assets/css/splash.css
@@ -17,7 +17,6 @@ body {
 
 .pulse-button {
     position: relative;
-    width: 2.5em;
     height: 2.5em;
     border: none;
     box-shadow: 0 0 0 0 rgba(18, 177, 13, 0.7);
@@ -38,6 +37,11 @@ body {
     -ms-transition: all 0.1s ease-in;
     -o-transition: all 0.1s ease-in;
     transition: all 0.1s ease-in;
+    width: 20em;
+    height: 2.5em;
+    border-radius: 2em;
+    background-color: #97bf0d;
+    margin-left: -6em;
 }
 
 .pulse-button:hover {
@@ -418,33 +422,12 @@ button:focus {
 
 }
 
-.name-box {
-    width: 100%;
-    height: 25%;
-}
-
-.job-box {
-    width: 100%;
-}
-
-button:hover {
-    width: 20em;
-    height: 2.5em;
-    border-radius: 2em;
-    background-color: #97bf0d;
-    margin-left: -6em;
-}
-
-.text {
-    display: none;
-}
-
 .pulse-button:hover .text {
     display: inline;
     overflow: hidden;
 }
 
-a{
+a {
     text-decoration: none !important;
     list-style-type: none;
 }
